# RealSenseBoxDetection

./: CMakeLists.txt  Config.xml  README.md  RealSenseBoxDetection_v3.1.cpp  points_log.csv  puntos_log.csv
src/: RealSenseBoxDetection.cpp
